--- a/client/style.css
+++ b/client/style.css
@@ -3,6 +3,7 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 #top {
@@ -14,8 +15,56 @@ html, body {
   font-size: 2em;
 }
 
+.params {
+  margin-left: 40px;
+}
+
+.sep {
+  margin-left: 20px;
+}
+
+.sub {
+  color: black;
+}
+
+.main {
+  color: blue;
+}
+
+.head {
+  text-align:center;
+}
+
+.example {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 15px;
+  margin-left: 20px;
+}
+
+code {
+  background-color: #333;
+  border-radius: 4px;
+  font-family: "Consolas", monospace;
+  padding: 2px 4px;
+  color: #f5f5f5;
+}
+
 #content {
   margin-top: 100px;
   font-size: 2em;
   text-align: center;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
